syntax = "proto3";

package pb;

import "protoc-gen-openapiv2/options/annotations.proto";

import "payment.proto";

option go_package = "github.com/itsscb/df/pb";

message ListPaymentsRequest {
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
        json_schema: {
          title: "ListPayments";
          description: "Returns a List of Payments";
          required: [
            "id"
            ];
        };
        example: "{\"account_id\": 1 }";
    };
    int64 account_id = 1;
}

message ListPaymentsResponse {
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
        json_schema: {
          title: "ListPayments Response";
          description: "Returns the Payment";
        };
    };
    repeated Payment payments = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      }];
}